# cub_3d_21

./: 1.c  10.c  11.c  12.c  13.c  2.c  3.c  33.cub  4.c  5.c  6.c  7.c  8.c  9.c  CMakeLists.txt  Makefile  README.md  aer_spell.xpm  all.xpm  auf.c  cub.h  cub_3D_bonus  cub_3d.c  earth_ic.xpm  earth_spell.xpm  fire_ic.xpm  fire_spell.xpm  ft_atoi.c  ft_strncmp.c  functions_1.c  functions_2.c  functions_3.c  functions_4.c  left_hand.xpm  left_hand0.xpm  left_hand1.xpm  mana.xpm  wall.xpm  water_ic.xpm  water_spell.xpm  (+4 more)
gnl/: get_next_line.h  get_next_line.h.gch  get_next_line_utils.c
libft/: libft.h
